// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary with count and total for a single expense 1`] = `
<div>
  <h3>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h3>
</div>
`;

exports[`should render expenses summary with count and total for multiple expenses 1`] = `
<div>
  <h3>
    Viewing 
    7
     
    expenses
     totalling 
    $510.65
  </h3>
</div>
`;
